--- a/package.json
+++ b/package.json
@@ -1,11 +1,30 @@
 {
   "name": "demolishedaudio",
-  "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
+  "version": "0.0.0",
+  "private": true,
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "dev": "vite",
+    "build": "run-p type-check build-only",
+    "preview": "vite preview",
+    "build-only": "vite build",
+    "type-check": "vue-tsc --noEmit"
   },
-  "author": "",
-  "license": "ISC"
+  "dependencies": {
+    "@codemirror/lang-javascript": "^6.1.5",
+    "@codemirror/theme-one-dark": "^6.1.1",
+    "codemirror": "^6.0.1",
+    "pinia": "^2.0.32",
+    "vue": "^3.2.47",
+    "vue-codemirror": "^6.1.1",
+    "vue-debounce": "^4.0.0"
+  },
+  "devDependencies": {
+    "@types/node": "^18.14.2",
+    "@vitejs/plugin-vue": "^4.0.0",
+    "@vue/tsconfig": "^0.1.3",
+    "npm-run-all": "^4.1.5",
+    "typescript": "~4.8.4",
+    "vite": "^4.1.4",
+    "vue-tsc": "^1.2.0"
+  }
 }
